# WeDLM

./: .gitignore  ANALYSIS.md  LICENSE  MANIFEST.in  Readme.md  example.py  install.sh  pyproject.toml  requirements.txt  setup.py  web_demo.py
docs/: 01-causal-attention-innovation.md  02-sliding-window-decoding.md  03-entropy-position-selection.md  04-production-optimizations.md  05-fine-tuning-guide.md
evaluation/: demo.sh  download_datasets.py  evaluation_base.sh  wedlm_eval.py
evaluation/dataset_download/: arc.py  gpqa.py  gsm8k.py  hellaswag.py  humaneval.py  math.py  mbpp.py  mmlu.py
evaluation/datasets/: __init__.py  arc_c.py  arc_e.py  base_dataset.py  gpqa.py  gsm8k.py  hellaswag.py  humaneval.py  math.py  mbpp.py  mmlu.py
evaluation/evaluators/: __init__.py  arc_c_evaluator.py  base_evaluator.py  gpqa_evaluator.py  gsm8k_evaluator.py  hellaswag_evaluator.py  humaneval_evaluator.py  math_evaluator.py  mbpp_evaluator.py  mmlu_evaluator.py
hf_compat/: __init__.py  configuration_wedlm.py  modeling_wedlm.py
wedlm/: __init__.py  config.py  llm.py  sampling_params.py
wedlm/engine/: block_manager.py  llm_engine.py  model_runner.py  sampler.py  scheduler.py  sequence.py  wedlm_decoder.py
wedlm/layers/: activation.py  attention.py  embed_head.py  layernorm.py  linear.py  rotary_embedding.py
wedlm/models/: wedlm.py
wedlm/utils/: context.py  loader.py
